workload/apps/istio/templates/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-istio
  namespace: istio-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-prometheus-stack
      ports:
        - protocol: TCP
          port: 15020
      ports:
        - protocol: TCP
          port: 10259
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
    - from:
        - ipBlock:
            cidr: 192.168.0.0/16
        - ipBlock:
            cidr: 10.0.0.0/22
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 15000
        - protocol: TCP
          port: 15001
        - protocol: TCP
          port: 15002
        - protocol: TCP
          port: 15004
        - protocol: TCP
          port: 15006
        - protocol: TCP
          port: 15008
        - protocol: TCP
          port: 15010
        - protocol: TCP
          port: 15012
        - protocol: TCP
          port: 15014
        - protocol: TCP
          port: 15017
        - protocol: TCP
          port: 15020
        - protocol: TCP
          port: 15021
        - protocol: TCP
          port: 15053
        - protocol: TCP
          port: 15090
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
